# nn_adapt

./: makefile  pyproject.toml
models/: __init__.py  bathymetry.py  turbine_gnn.py
scripts/: gnn_adapt_base.py  gnn_adapt_domain_long.py  gnn_adapt_domain_wide.py  gnn_adapt_match.py  gnn_adapt_offset_reverse.py  gnn_adapt_offset_viscosity.py  gnn_adapt_reverse.py  gnn_adapt_trench.py  makefile  turbine_run_convergence.py  turbine_run_forward.py
workflow/: __init__.py  adaptor.py  features.py  postprocessing.py  simulation.py  timer.py
